--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.ad_samy">
+    package="com.adsamy.ad_samy">
    <application
         android:label="AdSamy"
         android:name="${applicationName}"
@@ -8,7 +8,7 @@
         android:icon="@mipmap/ic_launcher"
        tools:targetApi="m">
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.ad_samy.MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
             android:theme="@style/LaunchTheme"
