--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.adsamy.ad_samy">
+    package="com.example.ad_samy">
    <application
         android:label="AdSamy"
         android:name="${applicationName}"
